// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests should match snapshot multicolor 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 90%;
}

.c2 {
  width: 25%;
  background-color: red;
  --radius: 0.5rem;
  height: 0.8rem;
}

.c2:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c2:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

.c3 {
  width: 25%;
  background-color: orange;
  --radius: 0.5rem;
  height: 0.8rem;
}

.c3:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c3:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

.c4 {
  width: 25%;
  background-color: yellow;
  --radius: 0.5rem;
  height: 0.8rem;
}

.c4:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c4:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

.c5 {
  width: 25%;
  background-color: green;
  --radius: 0.5rem;
  height: 0.8rem;
}

.c5:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c5:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      color="red"
      data-testid="bar"
    />
    <div
      class="c3"
      color="orange"
      data-testid="bar"
    />
    <div
      class="c4"
      color="yellow"
      data-testid="bar"
    />
    <div
      class="c5"
      color="green"
      data-testid="bar"
    />
  </div>
</div>
`;

exports[`Snapshot tests should match snapshot simple 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 90%;
}

.c2 {
  width: 25%;
  background-color: red;
  --radius: 0.2rem;
  height: 0.3rem;
}

.c2:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c2:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

.c3 {
  width: 25%;
  background-color: orange;
  --radius: 0.2rem;
  height: 0.3rem;
}

.c3:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c3:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

.c4 {
  width: 25%;
  background-color: yellow;
  --radius: 0.2rem;
  height: 0.3rem;
}

.c4:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c4:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

.c5 {
  width: 25%;
  background-color: green;
  --radius: 0.2rem;
  height: 0.3rem;
}

.c5:first-child {
  border-radius: var(--radius) 0 0 var(--radius);
}

.c5:last-child {
  border-radius: 0 var(--radius) var(--radius) 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      color="red"
      data-testid="bar"
    />
    <div
      class="c3"
      color="orange"
      data-testid="bar"
    />
    <div
      class="c4"
      color="yellow"
      data-testid="bar"
    />
    <div
      class="c5"
      color="green"
      data-testid="bar"
    />
  </div>
</div>
`;
